objects/SES__c.object
<CustomObject>
    <fields>
        <fullName>Category_describe_yearly_household_incom__c</fullName>
        <description>Which category best describes your yearly household income before taxes? Include all income received from employment, social security, investments, retirement accounts, etc</description>
        <inlineHelpText>Which category best describes your yearly household income before taxes? Include all income received from employment, social security, investments, retirement accounts, etc</inlineHelpText>
        <label>SES_v1.0.7</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SESs</relationshipLabel>
        <relationshipName>SESs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_own_a_home__c</fullName>
        <description>Do you own a home (includes currently paying a mortgage)?</description>
        <inlineHelpText>Do you own a home (includes currently paying a mortgage)?</inlineHelpText>
        <label>SES_v1.0.8</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_own_a_working_motor_vehicle__c</fullName>
        <description>Do you own a working motor vehicle (car, truck, van, SUV) now?</description>
        <inlineHelpText>Do you own a working motor vehicle (car, truck, van, SUV) now?</inlineHelpText>
        <label>SES_v1.0.11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>How_many_bedrooms_in_the_house__c</fullName>
        <description>How many bedrooms (including guest bedrooms, bedrooms used as offices etc…) are in the house or apartment which is your PRIMARY residence?</description>
        <inlineHelpText>How many bedrooms (including guest bedrooms, bedrooms used as offices etc…) are in the house or apartment which is your PRIMARY residence?</inlineHelpText>
        <label>SES_v1.0.10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_do_you_own__c</fullName>
        <description>If yes, how many do you own?</description>
        <inlineHelpText>If yes, how many do you own?</inlineHelpText>
        <label>SES_v1.0.12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_people_live_in_your_home__c</fullName>
        <description>If yes, how many people (NOT including yourself) live in your home?</description>
        <inlineHelpText>If yes, how many people (NOT including yourself) live in your home?</inlineHelpText>
        <label>SES_v1.0.9</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_year_you_take_out_of_town_vacation__c</fullName>
        <description>During the last year, did you take an out-of-town vacation?</description>
        <inlineHelpText>During the last year, did you take an out-of-town vacation?</inlineHelpText>
        <label>SES_v1.0.13</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Think_of_this_ladder_as_United_States__c</fullName>
        <description>Think of this ladder as representing where people stand in your country.</description>
        <label>SES_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Think_of_this_ladder_as_communities__c</fullName>
        <description>Think of this ladder as representing where people stand in their communities.</description>
        <label>SES_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_highest_degree_you_earned__c</fullName>
        <description>Which of the following best describes the highest level of education you have completed?</description>
        <inlineHelpText>Which of the following best describes the highest level of education you have completed?</inlineHelpText>
        <label>SES_v1.0.3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_employment_status__c</fullName>
        <description>What is your current employment status?</description>
        <inlineHelpText>What is your current employment status?</inlineHelpText>
        <label>SES_v1.0.5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_marital_status__c</fullName>
        <description>What is your current marital status?</description>
        <inlineHelpText>What is your current marital status?</inlineHelpText>
        <label>SES_v1.0.6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_primary_occupation__c</fullName>
        <description>What is your primary occupation?</description>
        <inlineHelpText>What is your primary occupation?</inlineHelpText>
        <label>SES_v1.0.4</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SES</label>
    <nameField>
        <displayFormat>SES-{0000000000}</displayFormat>
        <label>SES Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SESs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>